--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 html,
 body {
   color: white;
-  background-color: #171717;
+  background-color: #0f0f0f;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -19,4 +19,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.animated-logo {
+  width: clamp(250px, 80vh, 600px);
+  height: 100%;
+  aspect-ratio: 1;
 }
