--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@ a {
 }
 
 .animated-logo {
-  width: clamp(250px, 80vh, 600px);
+  width: clamp(250px, 80vw, 500px);
   height: 100%;
   aspect-ratio: 1;
 }
